--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
+    <string name="Button_Ask">Ask</string>
     <string name="app_name">Magic Eight Ball</string>
+    <string name="textView_text">Make everyday decisions easier!</string>
 </resources>
